locust/Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: locust
  labels:
    name: locust
