locust/Service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: meu-site
  name: locust
  labels:
    app: locust
spec:
  selector:
    app: locust
  ports:
    - protocol: TCP
      port: 8089
      targetPort: 8089
      name: tcp-app
  type: ClusterIP
