locust/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: locust
  name: locust
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - locust.henriqzimer.com.br
    secretName: wildcard-henriqzimer-tls
  rules:
    - host: locust.henriqzimer.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: locust
                port:
                  number: 8089
